<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlayForGood</string>
    <string name="app_info">Info</string>
    <string name="info_text">PlayForGood let\'s you do some good by donating to your favourite NGO 
        while you are using an App for more hours than you plan to!!! This is a good way to avoid 
        excessive usage of Apps like games, social networking sites and at the same time you are 
        contributing for a cause!!!</string>
    <string name="app_settings">Settings</string>
    <string name="profile_settings">Profile</string>
    <string name="notification_settings">Notifications</string>
    <string name="default_settings">Default Configuration</string>
    <string name="title_home">Home</string>
    <string name="title_reportcard">Report Card</string>
    <string name="title_pickngo">Pick NGO</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">SettingsAc</string>
    <string name="hrs_p_day">Hrs/Day:</string>
    <string name="donation_p_hr">Donation/Hr:\n(min Rs.10/-)</string>
    <string name="money_rs">Money (Rs)</string>
    <string name="time_hr">Time (Hr)</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="pick_ngo">Pick NGO:</string>

    <string-array name="pick_ngo_array">
        <item>Care</item>
        <item>Health</item>
    </string-array>

</resources>